fix: mobile visibility issues

--- a/components/nav.module.scss
+++ b/components/nav.module.scss
@@ -5,9 +5,7 @@
     display: flex;
     justify-content: space-between;
     margin-left: -2rem;
-    margin-right: -2rem;
     padding-left: 2rem;
-    padding-right: 2rem;
 
     /* Sticky nav backdrop from Lee Robinson: https://leerob.io */
     position: sticky;
@@ -48,7 +46,7 @@
         vertical-align: middle;
         align-items: center;
         justify-content: center;
-        margin-right: 2rem;
+        // margin-right: 2rem;
         ul {
             padding: 0;
             flex: 0 0 auto;
